--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
               "input": "public"
             }],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
@@ -85,6 +86,7 @@
               "input": "public"
             }],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
             ],
             "scripts": []
